Add checksum option to DROID API
This allows you to pass in a list of hash algorithms and the API will
return the checksums for the file for that algorithm.